--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         })
         .catch((e) => {
           console.log(e);
-          document.getElementById("test2").innerHTML = JSON.stringify("error: "+ e);
+          document.getElementById("test2").innerHTML = "error: " JSON.stringify(e);
         });
     };
 
