--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       zetrixConnect
         .auth()
         .then((res) => {
-          document.getElementById("test2").innerHTML = "Success: " + JSON.stringify(res) + res.toString();
+          document.getElementById("test2").innerHTML = "Success: " + JSON.stringify(res) + res.toString() + "!!";
           console.log(res);
         })
         .catch((e) => {
