--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <p>I'm hosted with GitHub Pages.</p>
   </body>
   <script type="module">
-    import ZetrixWalletConnect from "https://cdn.skypack.dev/zetrix-connect-wallet-sdk@1.1.4";
+    import ZetrixWalletConnect from "https://cdn.skypack.dev/pin/zetrix-connect-wallet-sdk@v1.1.4-Ua4VpKj6R9MAVgVTkxYu/mode=imports/optimized/zetrix-connect-wallet-sdk.js";
 
     var zetrixConnect = new ZetrixWalletConnect({
       qrcode: false,
