--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
   <script type="module">
     import ZetrixWalletConnect from "https://cdn.skypack.dev/pin/zetrix-connect-wallet-sdk@v1.1.4-Ua4VpKj6R9MAVgVTkxYu/mode=imports/optimized/zetrix-connect-wallet-sdk.js";
 
+    const options = {
+      bridge: 'wss://test-wscw.zetrix.com'
+    }
+    
     var zetrixConnect = new ZetrixWalletConnect({
       qrcode: false,
     });
 
-    zetrixConnect.connect();
+    zetrixConnect.connect(options);
 
     const test = () => {
       document.getElementById("test").innerHTML = "Calling Auth";
