--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <h1>Hello World</h1>
-    <p>I'm hosted with GitHub Pages.</p>
+    <h1>Zetrix Wallet Integration</h1>
   </body>
   <script type="module">
     import ZetrixWalletConnect from "https://cdn.skypack.dev/pin/zetrix-connect-wallet-sdk@v1.1.4-Ua4VpKj6R9MAVgVTkxYu/mode=imports/optimized/zetrix-connect-wallet-sdk.js";
