--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       zetrixConnect
         .auth()
         .then((res) => {
+          Print.postMessage(JSON.stringify(res))
           document.getElementById("test2").innerHTML = "Success: " + JSON.stringify(res) + res.toString() + "!!";
           console.log(res);
         })
