--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       document.getElementById("test").innerHTML = "Calling Auth";
       zetrixConnect
         .auth()
-        .then((res) => {
+        .then((res) {
           Print.postMessage(JSON.stringify(res));
           document.getElementById("test2").innerHTML = "Success: " + JSON.stringify(res) + res.toString() + "!!";
           console.log(res);
