--- a/index.html
+++ b/index.html
@@ -1,38 +1,18 @@
 <!DOCTYPE html>
-<html>
-  <body>
-    <h1>Zetrix Wallet Integration</h1>
-  </body>
-  <script type="module">
-    import ZetrixWalletConnect from "https://cdn.skypack.dev/zetrix-connect-wallet-sdk@1.1.3";
-
-    const options = {
-      bridge: 'wss://test-wscw.zetrix.com'
-    }
-    
-    var zetrixConnect = new ZetrixWalletConnect({
-      qrcode: false,
-    });
-
-    zetrixConnect.connect(options);
-
-    const test = () => {
-      document.getElementById("test").innerHTML = "Calling Auth";
-      zetrixConnect
-        .auth()
-        .then((res) => {
-        document.getElementById("test2").innerHTML = JSON.stringify(res);
-        console.log(res);
-      })
-        .catch((e) => {
-          console.log(e);
-          document.getElementById("test2").innerHTML = JSON.stringify(e);
-        });
-    };
-
-    setTimeout(test, 1000);
-  </script>
-  <span id="test">No Update</span
-  ><br />
-  <span id="test2">No Update</span>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Simple HTML Page</title>
+</head>
+<body>
+    <h1>Welcome to My Simple HTML Page</h1>
+    <p>This is a simple HTML file created for demonstration purposes.</p>
+    <ul>
+        <li>HTML is the standard markup language for creating web pages.</li>
+        <li>It stands for Hyper Text Markup Language.</li>
+        <li>HTML describes the structure of web pages using markup.</li>
+    </ul>
+    <a href="https://www.example.com">Visit Example</a>
+</body>
 </html>
